Add Java 21 to CI
Build with Java 21 which is a LTS version.
Disable the lint `this-escape` to pass the compilation.
Address other warns/deprecations.

Signed-off-by: thc202 <thc202@gmail.com>