@@ -21,6 +21,7 @@ package org.zaproxy.zap.tasks;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -64,7 +65,7 @@ public abstract class HandleWeeklyRelease extends SendRepositoryDispatch {
         String checksum;
         try {
             checksum = createChecksum(getChecksumAlgorithm().get(), downloadRelease());
-        } catch (IOException e) {
+        } catch (Exception e) {
             throw new BuildException(e);
         }
 
@@ -73,9 +74,9 @@ public abstract class HandleWeeklyRelease extends SendRepositoryDispatch {
         payloadData.put("checksum", checksum);
     }
 
-    private Path downloadRelease() throws IOException {
+    private Path downloadRelease() throws Exception {
         String urlString = getDownloadUrl().get();
-        URL url = new URL(urlString);
+        URL url = new URI(urlString).toURL();
         if (!HTTPS_SCHEME.equalsIgnoreCase(url.getProtocol())) {
             throw new IllegalArgumentException(
                     "The provided URL does not use HTTPS scheme: " + url.getProtocol());
